ajustes de desing do administrador e da tela de detalhes , ajustes também nos botões

--- a/src/app/detalhe/detalhe.component.html
+++ b/src/app/detalhe/detalhe.component.html
@@ -1,4 +1,41 @@
+<div class="container ">
+  <img  id="bg" src="../../assets/image/fundogeo1.jpg" alt="">
+<img id="detalheimg" src="../../assets/image/perfil-de-avatar-de-homem-no-icone-redondo_24640-14044.jpg" alt="">
+
+
+
 <form>
+    <div class="form-row">
+      <div class="form-group col-md-6">
+        <label for="inputUser">Usuario</label>
+        <input  [(ngModel)]="usuario.nome" [ngModelOptions] = "{standalone: true}" type="email" class="form-control" id="inputEmail4" placeholder="Usuario">
+      </div>
+      <div class="form-group col-md-6">
+        <label for="inputPassword4">Email</label>
+        <input  [(ngModel)] ="usuario.email" [ngModelOptions] = "{standalone: true}" type="text" class="form-control" id="inputPassword4" placeholder="Senha">
+      </div>
+    </div>
+    <div class="form-row">
+        <div class="form-group col-md-6">
+          <label for="inputEmail4">Telefone</label>
+          <input [(ngModel)] = "usuario.telefone" [ngModelOptions] = "{standalone: true}"  type="email" class="form-control" id="inputEmail4" placeholder="Email">
+        </div>
+        <div class="form-group col-md-6">
+          <label for="inputPassword4">Senha</label>
+          <input  [(ngModel)] = "usuario.senha" [ngModelOptions] = "{standalone: true}" type="text" class="form-control" id="inputPassword4" placeholder="Senha">
+        </div>
+      </div>
+    
+    <button type="submit" class=" btn btn-outline-purple" >Enviar</button>
+  </form>
+</div>
+
+
+
+
+
+
+<!--form>
     <div class="form-group">
       <label for="exampleInputEmail1">Usuario</label>
       <input type="text" [(ngModel)]="usuario.nome" [ngModelOptions] = "{standalone: true}">
@@ -20,4 +57,4 @@
               </div>
     
     <button (click)= "enviarAlteracoes();" class="btn btn-primary">Enviar</button>
-  </form>
+  </form-->
