--- a/src/app/administrador/administrador.component.html
+++ b/src/app/administrador/administrador.component.html
@@ -1,9 +1,29 @@
-<div class="row">
+<div class="row " >
     <div class="col-md-12"> 
-        <div *ngFor='let USER of listaUser'>
-            <p>
-                <a [routerLink]= "['/detalhe', USER.idUsuario]">{{USER.nome}} </a>
-            </p>
+        <div>
+                <div class="card" *ngFor='let USER of listaUser'>
+                        <div class="card-header">
+                                <h5>Usuario</h5>
+                        </div>
+                        <div class="card-body"><img src="../../assets/image/perfil-de-avatar-de-homem-no-icone-redondo_24640-14044.jpg" alt="">
+                          <h5 class="card-title"></h5>
+                          <p class="card-text" > {{USER.nome}}</p>
+                          <a href="#" class=" btn btn-outline-purple" [routerLink]= "['/detalhe', USER.idUsuario]">Info</a>
+                        </div>
+                      </div>
+           
+           
+           
+           
+           
+           
+           
+            <!--<div class="card">
+                    <div class="card-body">
+
+                            <a [routerLink]= "['/detalhe', USER.idUsuario]">{{USER.nome}} </a>
+                    </div>
+                  </div-->
 
         </div>
     </div>
