--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -7,7 +7,7 @@
 
   <div class="card" id="login">
     <div class="card-header" id="cardheader">
-      <img src="../../assets/image/imagemP.png" alt="" id="imglogin"><img src="../../assets/image/login.png" alt=""
+      <img src="../../assets/image/iconLampp.png" alt="" id="imglogin"><img src="../../assets/image/login.png" alt=""
         id="login1">
     </div>
     <div class="card-body">
@@ -23,7 +23,7 @@
           <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Senha">
         </div>
 
-        <button type="submit" class="btn btn-outline-light" style="background-color: #7a297a;">Entrar</button>
+        <button type="submit" class="btn btn-outline-purple">Entrar</button>
         <!--    <h6>Não é cadastrado? Cadastre-se aqui!</h6>
                             <button type="submit" class="btn btn-outline-light" style="background-color: #7a297a;">Cadastre-se</button>-->
       </form>
