--- a/src/app/sobre/sobre.component.css
+++ b/src/app/sobre/sobre.component.css
@@ -1,4 +1,184 @@
+/* data-toggle="collapse" data-target="#laura"><!--Collapse: responsavel por abrir as descrições ao click do mousse-->
+<div id="laura" class="collapse" aria-labelledby="foto1" data-parent="#accordionGroup"><!--aria-labelledby e data-parent: são responsaveis por fechar automaticamente um collapse caso outro collapse seja aberto-->*/
 @import url('https://fonts.googleapis.com/css?family=Indie+Flower|Lobster&display=swap');
+
+@-webkit-keyframes swing
+{
+    15%
+    {
+        -webkit-transform: translateX(5px);
+        transform: translateX(5px);
+    }
+    30%
+    {
+        -webkit-transform: translateX(-5px);
+       transform: translateX(-5px);
+    } 
+    50%
+    {
+        -webkit-transform: translateX(3px);
+        transform: translateX(3px);
+    }
+    65%
+    {
+        -webkit-transform: translateX(-3px);
+        transform: translateX(-3px);
+    }
+    80%
+    {
+        -webkit-transform: translateX(2px);
+        transform: translateX(2px);
+    }
+    100%
+    {
+        -webkit-transform: translateX(0);
+        transform: translateX(0);
+    }
+}
+@keyframes swing
+{
+    15%
+    {
+        -webkit-transform: translateX(5px);
+        transform: translateX(5px);
+    }
+    30%
+    {
+        -webkit-transform: translateX(-5px);
+        transform: translateX(-5px);
+    }
+    50%
+    {
+        -webkit-transform: translateX(3px);
+        transform: translateX(3px);
+    }
+    65%
+    {
+        -webkit-transform: translateX(-3px);
+        transform: translateX(-3px);
+    }
+    80%
+    {
+        -webkit-transform: translateX(2px);
+        transform: translateX(2px);
+    }
+    100%
+    {
+        -webkit-transform: translateX(0);
+        transform: translateX(0);
+    }
+}
+
+#titulo
+{
+text-align: center;
+font-family: 'Indie Flower', cursive;
+font-size: 70px;
+color:#7a297a;
+}
+
+/*#pt1
+{
+    background-color: rgba(0,0,0,.3); 
+    color: white
+}*/
+
+.letrac
+{
+    color: black;
+}
+/*.fotos{
+webkit-transition: width 2s, height 2s, -webkit-transform 2s; /* Safari */
+/*transition: width 2s, height 2s, transform 2s;
+}
+
+.fotos:hover {
+width: 300px;
+height: 300px;
+-webkit-transform: rotate(360deg); /* Safari */
+/*transform: rotate(360deg);
+}*/
+
+/*.bg{
+    background-image: url(../../assets/image/fteste.jpg);
+}
+
+/*.fotos{
+    width: 280px;
+    height: 250px;
+}*/
+
+#bg{
+    background: url(../../assets/image/fundogeo.jpg);
+    
+}
+
+#fundo{
+    position: absolute;
+    z-index: -1;
+}
+
+ 
+
+
+/*.collapse-text{
+    width: 280px;
+    text-align: justify;
+    padding:30px;
+    border: 1px solid #e9e0e0;
+    background: white;
+    transition-duration: 2s;
+}*/
+
+/*.collapse-text h5{
+    text-align: center;
+    padding-bottom: 20px;
+}*/
+
+.fotos {
+    width:195px;
+    height: 195px;
+    border-radius: 50%;
+
+}
+
+#foto1:hover{
+    -webkit-animation: swing 1s ease;
+    animation: swing 1s ease;
+    -webkit-animation-iteration-count: 1;
+    animation-iteration-count: 1;
+}
+
+#foto2:hover{
+    -webkit-animation: swing 1s ease;
+    animation: swing 1s ease;
+    -webkit-animation-iteration-count: 1;
+    animation-iteration-count: 1;
+}
+
+#foto3:hover{
+    -webkit-animation: swing 1s ease;
+    animation: swing 1s ease;
+    -webkit-animation-iteration-count: 1;
+    animation-iteration-count: 1;
+}
+
+#foto4:hover{
+    -webkit-animation: swing 1s ease;
+    animation: swing 1s ease;
+    -webkit-animation-iteration-count: 1;
+    animation-iteration-count: 1;
+}
+
+#foto5:hover{
+    -webkit-animation: swing 1s ease;
+    animation: swing 1s ease;
+    -webkit-animation-iteration-count: 1;
+    animation-iteration-count: 1;
+}
+
+
+/*@import url('https://fonts.googleapis.com/css?family=Indie+Flower|Lobster&display=swap');
 
 #titulo
 {
@@ -38,6 +218,7 @@ height: 300px;
     height: 250px;
 }*/
 
+/*
 .bg{
     background: url(../../assets/image/fteste.jpg);
 }
@@ -58,4 +239,4 @@ height: 300px;
 .fotos{
     width:280px;
     height: 250px;
-}
+}*/
