--- a/src/app/sobre/sobre.component.html
+++ b/src/app/sobre/sobre.component.html
@@ -1,22 +1,25 @@
-<div class="bg pt-5 pb-5">
+<div class="d-flex justify-content-end">
+    <img src="../../assets/image/fundogeo.jpg" alt="" id="fundo">
+</div>
+
     <!--Breve descrição do grupo-->
-    <div class="container pt-5 pl-5 pr-5" id="pt1">
-        <div class="row">
-            <div class="col-md-4"></div>
-            <div class="col-md-4">
+    <div class="container.flex" id="pt1">
+        <div class="col-md-8">
+            <div class="col-md-3"></div>
+            <div class="col-md-5 container pt-br mt-5 mb-5">
                 <h1 id="titulo"><strong>Sobre Nós</strong></h1>
             </div>
             <div class="col-md-4"></div>
             <div class="col-sm-12 ">
-                <p class="text-justify mr-5 ml-3">Somos um grupo de jovens que acredita no poder da tecnologia para
-                    transformar histórias. Tendo isso em mente criamos o, “Nome”. Nosso projeto é uma rede social
-                    que une cultura e educação e tem como objetivo expandir a inclusão dos jovens moradores da
-                    periferia no cenário cultural do estado de São Paulo. A nossa rede social foca na interação
-                    presencial e virtual dos seus usuários com compartilhamento de fotos dos eventos que acontecem
-                    no nosso mapa cultural e também na troca de informações educacionais entre aqueles que querem
-                    aprender e os que podem ensinar.</p>
+                <p class="text-justify mr-5 ml-3">Como será que a tecnologia pode aproximar os jovens, principalmente, da periferia de São Paulo da cultura e da educação?</p>
+
+                    <p class="text-justify mr-5 ml-3">Foi pensando nessa questão que criamos o Eureka!
+                    Este  projeto nasceu do amor pelo mundo tech e pelo seu poder de transformação.</p>
+                    
+                   <p class="text-justify mr-5 ml-3">Nosso maior objetivo é conectar estudantes da rede pública de ensino e professores a fim de tornar o aprendizado mais divertido. Além disso, esta rede social incentiva um maior engajamento cultural através do compartilhamento de eventos que irão colaborar com a formação desses jovens. 
+                    </p>
             </div>
-        </div>
+        
 
         <!--Fotos e Minibiografia dos Programadores desta rede social-->
         <div class="container letrac pt-5" id="pt2">
@@ -25,7 +28,7 @@
                     <!--Biografia da Laura-->
                     <div class="col-sm-4">
                         <div id="foto1">
-                            <img src="../../assets/image/laura.jfif" class="fotos" class="fotos img-thumbnail rounded"
+                            <img src="../../assets/image/laura.jfif" class="fotos" 
                                 data-toggle="collapse" data-target="#laura"><!--Collapse: responsavel por abrir as descrições ao click do mousse-->
                             <div id="laura" class="collapse" aria-labelledby="foto1" data-parent="#accordionGroup"><!--aria-labelledby e data-parent: são responsaveis por fechar automaticamente um collapse caso outro collapse seja aberto-->
                                 <div class="collapse-text">
@@ -45,7 +48,7 @@
                     <div class="col-sm-4">
                         <!--Biografia do Edson--><!--Orientações sobre tag e atributos na bio da Laura-->
                         <div id="foto2">
-                            <img src="../../assets/image/edson.jpg" class="fotos img-thumbnail rounded"
+                            <img src="../../assets/image/edson.jpg" class="fotos"
                                 data-toggle="collapse" data-target="#edson">
                             <div class="collapse" id="edson" aria-labelledby="foto2" data-parent="#accordionGroup">
                                 <div class="collapse-text">
@@ -65,12 +68,12 @@
                     <div class="col-sm-4">
                         <!--Biografia da Ana--><!--Orientações sobre tag e atributos na bio da Laura-->
                         <div id="foto3">
-                            <img src="../../assets/image/AnaB.jpg" class="fotos img-thumbnail rounded"
+                            <img src="../../assets/image/AnaB.jpg" class="fotos"
                                 data-toggle="collapse" data-target="#ana">
 
                             <div class="collapse" id="ana" aria-labelledby="foto3" data-parent="#accordionGroup">
                                 <div class="collapse-text">
-                                    <h5 class="card-title text-center">Ana Beatriz</h5>
+                                    <h5 class="card-title">Ana Beatriz</h5>
                                     <p class="card-text">Uma jovem mulher apaixonada por aprender e ensinar que
                                         encontrou na
                                         tecnologia um mundo de oportunidades, conexões e desenvolvimento. Considero
@@ -92,7 +95,7 @@
                     <div class="col-sm-4 ">
                         <!--Biografia do Italo--><!--Orientações sobre tag e atributos na bio da Laura-->
                         <div id="foto4">
-                            <img src="../../assets/image/italo.jpg" class="fotos img-thumbnail rounded"
+                            <img src="../../assets/image/italo.jpg" class="fotos"
                                 data-toggle="collapse" data-target="#italo">
                             <div class="collapse" id="italo" aria-labelledby="foto4" data-parent="#accordionGroup">
                                 <div class="collapse-text">
@@ -112,7 +115,7 @@
                     <div class="col-sm-4">
                         <!--Biografia do Wesley--><!--Orientações sobre tag e atributos na bio da Laura-->
                         <div id="foto5">
-                            <img src="../../assets/image/wesley.jpeg" class="fotos img-thumbnail rounded"
+                            <img src="../../assets/image/wesley.jpeg" class="fotos"
                                 data-toggle="collapse" data-target="#wesley">
                             <div class="collapse" id="wesley" aria-labelledby="foto5" data-parent="#accordionGroup">
                                 <div class="collapse-text">
