--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,5 +1,6 @@
-<nav class="navbar navbar-expand-lg" style="background-color: #7a297a;" id="navtitile">
-  <a class="navbar-brand" href="#">Navbar</a>
+
+<nav class=" container-fluid navbar navbar-expand-lg"  width="100%" style="background-color: #7a297a;" id="navtitile">
+  <a class="navbar-brand" href="#"><img src="../../assets/image/iconLampp.png" width="40px"></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
     aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -23,6 +24,7 @@
     <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#ExemploModalCentralizado">
       Cadastre-se
     </button>
+    
 
     <!-- Modal -->
     <div class="modal fade" id="ExemploModalCentralizado" tabindex="-1" role="dialog"
