Retirado um botão duplicado no formulário de login

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -24,11 +24,8 @@
            placeholder="Senha">
         </div>
 
-<<<<<<< HEAD
-        <button type="submit" class="btn btn-outline-purple">Entrar</button>
-=======
-        <button type="submit" class="btn btn-outline-light" style="background-color: #7a297a;" (click)="login()">Entrar</button>
->>>>>>> aa494d84ed5ac3ba8cfef454d1d0998c375d5fe0
+        <button type="submit" class="btn btn-outline-purple" (click)="login()">Entrar</button>
+
         <!--    <h6>Não é cadastrado? Cadastre-se aqui!</h6>
                             <button type="submit" class="btn btn-outline-light" style="background-color: #7a297a;">Cadastre-se</button>-->
         </div>
