--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -19,6 +19,9 @@
       <li class="nav-item">
         <a class="nav-link" style="color:white" [routerLink]="'/administrador'">Administrador</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" style="color:white" [routerLink]="'/ajuda'">Ajuda</a>
+      </li>
     </ul>
     <!-- Botão para acionar modal -->
     <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#ExemploModalCentralizado">
