--- a/src/app/feed-list/feed-list.component.html
+++ b/src/app/feed-list/feed-list.component.html
@@ -9,7 +9,7 @@
                 width="150"></div>
             <div class="card-body">
                 <!--Nome do usuário-->
-                <h5 class="card-title"><strong>Milles Morales</strong></h5>
+                <h5 class="card-title"><strong>{{usuario.nome}}</strong></h5>
                 <!--Parte da descrição do perfil-->
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content. Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos facere at accusantium? Eius voluptatibus molestiae, porro voluptatem magnam eos, tenetur officiis adipisci sunt repellat iusto, consequatur odit asperiores totam minus?Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero enim ut autem officia? Earum fugit ulla asperiores rem similique hic sed. Laborum nam architecto necessitatibus quibusdam quis aepe impedit sint.
                 </p>
