melhorias no layout /9sobre nós e ajuda

--- a/src/app/ajuda/ajuda.component.html
+++ b/src/app/ajuda/ajuda.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container-fluid">
     <div class="row">
         <div class="col-md-8">
     <h1 class="d-flex justify-content-center mt-5" style="color:#7a297a">Perguntas Frequentes</h1>
@@ -194,5 +194,10 @@
     </div>
         </div>
     </div>
+
+    <div class = "col-md-4 d-flex justify-content-end p-0" id="fundo">
+        <img src="../../assets/image/fundogeo1.jpg" alt="">
+    </div>
 </div>
 </div>
+<app-rodape></app-rodape>
