--- a/src/app/sobre/sobre.component.html
+++ b/src/app/sobre/sobre.component.html
@@ -6,7 +6,7 @@
     <div class="container.flex" id="pt1">
         <div class="col-md-8">
             <div class="col-md-3"></div>
-            <div class="col-md-5 container pt-br mt-5 mb-5">
+            <div class="col-md-5 container pt-br mt-5 mb-4">
                 <h1 id="titulo"><strong>Sobre Nós</strong></h1>
             </div>
             <div class="col-md-4"></div>
@@ -16,14 +16,46 @@
                     <p class="text-justify mr-5 ml-3">Foi pensando nessa questão que criamos o Eureka!
                     Este  projeto nasceu do amor pelo mundo tech e pelo seu poder de transformação.</p>
                     
-                   <p class="text-justify mr-5 ml-3">Nosso maior objetivo é conectar estudantes da rede pública de ensino e professores a fim de tornar o aprendizado mais divertido. Além disso, esta rede social incentiva um maior engajamento cultural através do compartilhamento de eventos que irão colaborar com a formação desses jovens. 
+                   <p class="text-justify mr-5 ml-3 mb-5">Nosso maior objetivo é conectar estudantes da rede pública de ensino e professores a fim de tornar o aprendizado mais divertido. Além disso, esta rede social incentiva um maior engajamento cultural através do compartilhamento de eventos que irão colaborar com a formação desses jovens. 
                     </p>
+ 
+                    <h3>Missão e Valores</h3>
+                    <div class="row mt-5 mb-5">
+                        <div class="col-md-4">
+                            <div class="d-flex justify-content-center ">
+                                <img class ="valores" src="../../assets/image/museu.png"  alt="">
+                            </div>
+                             <div class="d-flex justify-content-center mt-3">
+                                <p>Cultura é o que nos torna humanos</p>
+                             </div>
+                            
+                        </div>
+                        <div class="col-md-4">
+                            <div class="d-flex justify-content-center ">
+                                <img class ="valores" src="../../assets/image/chepeu.png"  alt=""> 
+                            </div>
+                            <div class="d-flex justify-content-center mt-3">
+                                <p>Cultura é o que nos torna humanos</p>
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="d-flex justify-content-center">
+                                <img class ="valores" src="../../assets/image/intercambiocheck.png"  alt="">
+                            </div>
+                             <div class="d-flex justify-content-center mt-3">
+                                <p>Cultura é o que nos torna humanos</p>
+                             </div>
+                            
+                        </div>
+                    </div>
+                    <hr>
             </div>
         
 
         <!--Fotos e Minibiografia dos Programadores desta rede social-->
         <div class="container letrac pt-5" id="pt2">
             <div class="accordion" id="accordionGroup"><!--Cria um grupo de botões para receber fechamento automaticamente de um collapse ao abrir outro-->
+                <h3 id="subtitulo">Membros</h3>
                 <div class="row">
                     <!--Biografia da Laura-->
                     <div class="col-sm-4">
@@ -137,3 +169,5 @@
 
     </div>
 </div>
+
+<app-rodape></app-rodape>
