--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -4,7 +4,7 @@
     aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-  <div class="collapse navbar-collapse" id="navbarNav">
+  <div class="collapse navbar-collapse" id="navbarNav"></div>
     <ul class="navbar-nav">
       <li class="nav-item">
         <a class="nav-link" style="color:white" [routerLink]="'/Feed'">Feed </a>
@@ -21,7 +21,6 @@
       <li class="nav-item">
         <a class="nav-link" style="color:white" [routerLink]="'/ajuda'">Ajuda</a>
       </li>
-<<<<<<< HEAD
 
       
     </ul>
@@ -74,8 +73,6 @@
                 <span *ngIf='erroSenha'>{{erroConfirmacao}}<br></span>
                 
               </div>
-=======
->>>>>>> cc503cecb9091c6499632776019f3aa86644e34a
 
     </ul>
   </div>
