Retirado bag que não deixava o site rodar

--- a/src/app/ajuda/ajuda.component.html
+++ b/src/app/ajuda/ajuda.component.html
@@ -124,7 +124,7 @@
 
                 <div id="collapseSeven" class="collapse" aria-labelledby="headingSeven" data-parent="#accordion">
                     <div class="card-body">
-                        <p>Caso você não consiga se lembrar da senha que cadastrou entre em contato através do e-mail: eurekasocial@gmail.com.</p>>
+                        <p>Caso você não consiga se lembrar da senha que cadastrou entre em contato através do e-mail: eurekasocial@gmail.com.</p>
                     </div>
                 </div>
             </div>
