--- a/src/app/feed-list/feed-list.component.html
+++ b/src/app/feed-list/feed-list.component.html
@@ -106,9 +106,9 @@
             </div>
     
             <div class="form-inline my-3">
-                <input class="form-control mr-sm-2" type="search" placeholder="Search" [(ngModel)]="buscar"
+                <input class="form-control mr-sm-2" type="search" placeholder="Pesquise" [(ngModel)]="buscar"
                     aria-label="Search">
-                <button class=" btn btn-outline-purple" type="submit" (click)="findId()">Search</button>
+                <button class=" btn btn-outline-purple" type="submit" (click)="findId()">Pesquisar</button>
             </div>
         </div>
     </div> 
