--- a/src/app/sobre/sobre.component.html
+++ b/src/app/sobre/sobre.component.html
@@ -1,5 +1,6 @@
 <div class="d-flex justify-content-end">
     <img src="../../assets/image/fundogeo.jpg" alt="" id="fundo">
+    <img src="../../assets/image/fundogeo.jpg" alt="" id="fundo">
 </div>
 
     <!--Breve descrição do grupo-->
