--- a/src/app/detalhe/detalhe.component.css
+++ b/src/app/detalhe/detalhe.component.css
@@ -1,5 +1,5 @@
 form{
-    margin: 5%;
+    margin: 10%;
 }
 #detalheimg{
     width: 200px;
@@ -11,7 +11,7 @@ form{
     position: absolute;
     z-index: -1;
     margin-left: 78.5%;
-   
+   height: 100%;
 }
 .btn-outline-purple{
     border-color: #7a297a;
@@ -22,4 +22,8 @@ form{
 .btn-outline-purple:hover{
     background-color: #7a297a;
     color: white;
+}
+
+#detalhes{
+    width: 100%;
 }
