inclementação do background lateral das paginas sobre ńós, admistrador e detalhes. Modança de cores e tamanho das mensagens de erro, de 16px preto para 12px vermelho.

--- a/src/app/administrador/administrador.component.css
+++ b/src/app/administrador/administrador.component.css
@@ -17,3 +17,9 @@
     background-color: #7a297a;
     color: white;
 }
+
+.bg{
+    background-image: url(../../assets/image/fundogeo.jpg);
+    background-position: right top;
+    background-repeat: repeat-y;
+}
