--- a/src/app/ajuda/ajuda.component.css
+++ b/src/app/ajuda/ajuda.component.css
@@ -28,3 +28,9 @@
 #fundo{
     padding: 0%;
 }
+
+.bg{
+    background-image: url(../../assets/image/fundogeo.jpg);
+    background-position: right top;
+    background-repeat: repeat-y;
+}
