--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -71,4 +71,10 @@ input[type=number] {
 #cadastrar{
   margin-left: 14%;
 }
+
+.erro{
+  font-size: 12px;
+  color: red;
+  text-indent: 50px;
+}
   
