--- a/src/app/sobre/sobre.component.html
+++ b/src/app/sobre/sobre.component.html
@@ -1,9 +1,9 @@
-<div class="d-flex justify-content-end">
+<!--<div class="d-flex justify-content-end">
     <img src="../../assets/image/fundogeo.jpg" alt="" id="fundo">
-    <img src="../../assets/image/fundogeo.jpg" alt="" id="fundo">
-</div>
-
+</div>-->
+<div class="bg">
     <!--Breve descrição do grupo-->
+    
     <div class="container.flex" id="pt1">
         <div class="col-md-8">
             <div class="col-md-3"></div>
@@ -51,7 +51,6 @@
                     </div>
                     <hr>
             </div>
-        
 
         <!--Fotos e Minibiografia dos Programadores desta rede social-->
         <div class="container letrac pt-5" id="pt2">
@@ -169,6 +168,7 @@
         </div>
 
     </div>
+</div>
 </div>
 
 <app-rodape></app-rodape>
