--- a/src/app/contato/contato.component.html
+++ b/src/app/contato/contato.component.html
@@ -1,7 +1,8 @@
-<div class="container-fluid p-0">
-    <div class="row">
-        <div class="col-md-8 d-flex justify-content-center">
-            <div class="col-md-8">
+<div class="bg">
+    <div class="container-fluid p-0">
+        <div class="row">
+            <div class="col-md-8 d-flex justify-content-center">
+                <div class="col-md-8">
                     <h1 id="titulo"><strong>Fale Conosco</strong></h1>
                     <div class="mt-3 pb-3">
                         <div class="form-group">
@@ -9,49 +10,46 @@
                             <input type="text" class="form-control" id="nome" [(ngModel)]="nome"
                                 [ngModelOptions]="{standalone: true}" aria-describedby="nome"
                                 placeholder="Digite seu nome..." autofocus required>
-        
-        
+
+
                             <label for="sobNome"><strong>Sobrenome</strong></label>
                             <input type="text" class="form-control" id="sobNome" [(ngModel)]="sobNome"
                                 [ngModelOptions]="{standalone: true}" aria-describedby="sobrenome"
                                 placeholder="Digite seu sobrenome..." required>
-        
-        
+
+
                             <label for="email"><strong>E-mail</strong></label>
                             <input type="email" class="form-control" id="email" [(ngModel)]="email"
                                 [ngModelOptions]="{standalone: true}" aria-describedby="emailHelp"
                                 placeholder="Digite seu e-mail..." required>
-        
-        
+
+
                             <label for="telefone"><strong>Telefone</strong></label>
                             <input for="text" class="form-control" id="telefone" [(ngModel)]="telefone"
                                 [ngModelOptions]="{standalone: true}" aria-describedby="telefone"
                                 placeholder="Digite seu telefone..." required>
-        
-        
+
+
                             <label for="caixatxt"><strong>Mensagem</strong></label>
                             <textarea [(ngModel)]="caixatxt" id="caixatxt" [ngModelOptions]="{standalone: true}"
                                 rows="10" cols="77" maxlength="500" placeholder="Digite sua mensagem..."
                                 required></textarea>
-        
+
                             <button type="button" class="btn btn-outline-purple" (click)="validaForm()">Enviar</button>
-        
+
                         </div>
-                    </div> 
+                    </div>
+                </div>
+
             </div>
-              
-        </div>
-        <div class="col-md-4 d-flex justify-content-end p-0">
-            <img src="../../assets/image/fundogeo1.jpg" id="fundo">
         </div>
     </div>
-
-    <app-rodape></app-rodape>
-
+<app-rodape></app-rodape>
 
 
 
-<!--<div class="bg">
+
+    <!--<div class="bg">
 
 <div class="row">
 <div class="container pt-br mt-5 mb-5" id="pt1">
